<resources>
    <string name="app_name">StreamFlow</string>
    <string name="default_data">N/A</string>
    <string name="tv_show">სერიალი</string>
    <string name="middle_dot">·</string>
    <string name="continue_watching">განაგრძეთ ყურება</string>
    <string name="watch">ყურება</string>
    <string name="trailer">ტრეილერი</string>
    <string name="episodes_and_more">ეპიზოდები და მეტი</string>
    <string name="search">ძიება</string>
    <string name="main">მთავარი</string>
    <string name="favorites">ფავორიტები</string>
    <string name="new_movies">ახალი ფილმები</string>
    <string name="genres">ჟანრები</string>
    <string name="parameters">პარამეტრები</string>
    <string name="log_out_of_profile">ანგარიშიდან გასვლა</string>
    <string name="authorization">ავტორიზაცია</string>
    <string name="click">დააჭირეთ</string>
    <string name="to_return">უკან გასასვლელად</string>
    <string name="connect_trakt">დაუკავშირდით TRAKT.TV-ს</string>
    <string name="about_streamflow">STREAMFLOW-ს შესახებ</string>
    <string name="clear_history">ისტორიის წაშლა</string>
    <string name="parameters_trakt_body">Trakt.tv-ს სერვისებთან დაკავშირების შემდეგ, შეძლებთ კალენდრის ფუნქციის ჩართვას აპლიკაციაში და ახალი სერიების თარიღების ნახვას.</string>
    <string name="parameters_about_body">Streamflow შეიქმნა იმ მიზნით, რომ ყველამ შეძლოს უფასოდ ფილმების და სერიალების ყურება ანდროიდის მოწყობილობებზე. არ ელოდოთ ამ აპლიკაციას iPhone-ზე</string>
    <string name="parameters_clear_history_body">გაასუფთავეთ ნახვების ისტორია. გაითვალისწინეთ: მთლიანად წაიშლება "განაგძრეთ ყურების" სია</string>
    <string name="title_will_be_added_soon">ფილმი/სერიალი მალე დაემატება</string>
    <string name="movie_of_the_day">დღის ფილმი</string>
    <string name="title_name">ფილმის სახელი</string>
    <string name="top_movies">ტოპ ფილმები</string>
    <string name="top_tv_shows">ტოპ სერიალები</string>
    <string name="details_and_more">დეტალები და მეტი</string>
    <string name="delete_from_list">სიიდან წაშლა</string>
    <string name="studios">სტუდიები</string>
    <string name="search_movies_tv_shows">მოძებნეთ ფილმები, სერიალები</string>
    <string name="account">ანგარიში</string>
    <string name="description">შინაარსი:</string>
    <string name="director">რეჟისორი:</string>
    <string name="genre">ჟანრი:</string>
    <string name="cast">მსახიობები</string>
    <string name="similar">მსგავსი</string>
    <string name="favorite_movies">ფავორიტი ფილმები</string>
    <string name="favorite_tv_shows">ფავორიტი სერიალები</string>
    <string name="log_in_to_see_favorites">ფავორიტების სანახავად, გთხოვ გაიაროთ ავტორიზაცია</string>
    <string name="add_favorite_movies_body">სამწუხაროდ, სიცარიელეა. დაამატეთ ფილმები ფავორიტებში</string>
    <string name="add_favorite_tv_shows_body">სამწუხაროდ, სიცარიელეა. დაამატეთ სერიალები ფავორიტებში</string>
    <string name="details">დეტალები</string>
    <string name="no_favorites_add_tv_or_movie">თქვენ არ გაქვთ ფავორიტები. აირჩიეთ ნებისმიერი ფილმი ან სერიალი და დაამატეთ აქ</string>
    <string name="dialog_remove_history_title">ნამდვილად გსურთ ნახვების ისტორიის წაშლა?</string>
    <string name="no">არა</string>
    <string name="yes">დიახ</string>
    <string name="dialog_remove_favorite_title">ნამდვილად გსურთ ფავორიტებიდან წაშლა?</string>
    <string name="dialog_sync_title">გსურთ ნახვების ისტორიის სინქრონიზაცია თქვენს ანგარიშთან?</string>
    <string name="dialog_sync_alert">*სინქრონიზაციის შემდეგ, მოწოყობილობის ისტორია წაიშლება</string>
    <string name="choose_language">აირჩიეთ ენა:</string>
    <string name="dialog_continue_watching_title">დიდი ხანია, რაც არ გამოჩენილხარ? გინდა გაგრძელება?</string>
    <string name="back_to_main">მთავარ გვერდზე დაბრუნება</string>
    <string name="catalogue">კატალოგი</string>
    <string name="email">ელ-ფოსტა</string>
    <string name="password">პაროლი</string>
    <string name="remove_from_list_title">ნამდვილად გსურთ სიიდან წაშლა?</string>
    <string name="profile_panel">ანგარიშის პანელი</string>
    <string name="watchlist">ვგეგმავ ყურებას</string>
    <string name="saved_movies">შენახული ფილმები</string>
    <string name="saved_tvShows">შენახული სერიალები</string>
    <string name="movies">ფილმები</string>
    <string name="tv_shows">სერილაები</string>
    <string name="other_episodes">სხვა ეპიზოდები</string>
    <string name="check_internet_connection">შეამოწმეთ ინტერნეტთან კავშირი</string>
    <string name="try_again">სცადეთ თავიდან</string>
    <string name="no_trailer_found">ტრეილერი ვერ მოიძებნა</string>
    <string name="version_number">ვერსია v%1$s</string>
    <string name="imdb_score">IMDB %1$s</string>
    <string name="episode_number">ეპიზოდი %1$s</string>
    <string name="categories">კატეგორიები</string>
    <string name="cast_more">მსახიობები და მეტი</string>
    <string name="unable_to_hide_from_list">სამწუხაროდ, ვერ მოხეხრდა სიიდან დამალვა</string>
    <string name="season_number">%1$s სეზონი</string>
    <string name="start_over">თავიდან ყურება</string>
    <string name="new_series">ახალი სერიები</string>
    <string name="we_suggest_watching">გირჩევთ უყურო</string>
    <string name="subtitles">სუბტიტრები</string>
    <string name="language">ენა</string>
    <string name="english">ინგლისური</string>
    <string name="russian">რუსული</string>
    <string name="georgian">ქართული</string>
    <string name="turn_off">გათიშვა</string>
    <string name="return_to_video">ვიდეოზე დაბრუნება</string>
    <string name="other_details">სხვა დეტალები</string>
</resources>