<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/clear_db_alert_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_remove_favorite_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/helvetica_neue_lt_geo_55_roman"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/remove_db_title_icon"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/red" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/helvetica_neue_lt_geo_65_medium"
        android:padding="20dp"
        android:background="@drawable/alert_dialog_button_background"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"/>

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/helvetica_neue_lt_geo_65_medium"
        android:padding="20dp"
        android:background="@drawable/alert_dialog_button_background"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>