<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary_color"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/subtitle_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3">

        <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/subtitles"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subtitles"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/subtitle_container"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3">

        <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/language"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_language"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_video"
            android:fontFamily="@font/helvetica_neue_lt_geo_65_medium" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/icon_arrow_right"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>