<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/fragment_top_toolbar" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.phone.favorites.PhoneFavoritesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding">

            <LinearLayout
                android:id="@+id/favorite_no_auth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_to_see_favorites"
                    android:fontFamily="@font/helvetica_neue_lt_geo_75_bold"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/helvetica_neue_lt_geo_65_medium"
                    android:padding="10dp"
                    android:text="პროფილის პანელი"
                    android:textColor="@color/text_on_accent_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_movies_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/favorite_movies"
                    app:arrow_visibility="false"/>

                <TextView
                    android:id="@+id/favorite_no_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_favorite_movies_body"
                    android:fontFamily="@font/helvetica_neue_lt_geo_55_roman"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/favorite_movies_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:indeterminateTint="@color/accent_color"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_favorites_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_tvshows_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/favorite_movies_container">

                <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/favorite_tv_shows"
                    app:arrow_visibility="false"/>

                <TextView
                    android:id="@+id/favorite_no_tvshows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_favorite_tv_shows_body"
                    android:fontFamily="@font/helvetica_neue_lt_geo_55_roman"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/favorite_tvshows_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:indeterminateTint="@color/accent_color"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_favorites_tvshows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>