<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.phone.home.HomeFragment">

    <include android:id="@+id/toolbar"
        layout="@layout/main_top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/fragment_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_day_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/movie_day_cover"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/friends_cover"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/phone_movie_day_background"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_day_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:textColor="@color/general_text_color"
                    android:textSize="22sp"
                    android:fontFamily="@font/helvetica_neue_lt_geo_55_roman"
                    android:shadowColor="@color/trueBlack"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/movie_day_tag"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_name" />

                <TextView
                    android:id="@+id/movie_day_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/helvetica_neue_lt_geo_caps_65_medium"
                    android:textSize="15sp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
                    android:text="@string/movie_of_the_day"
                    android:textColor="@color/accent_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ProgressBar
                    android:id="@+id/movieDay_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:indeterminateTint="@color/accent_color"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/fragment_padding"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/continue_watching_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                        android:id="@+id/continue_watching_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/continue_watching"
                        app:arrow_visibility="false"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_continue_watching_titles"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/continue_watching_header"
                        app:spanCount="2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_movies_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                        android:id="@+id/new_movies_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/new_movies"
                        app:arrow_visibility="true"/>

                    <ProgressBar
                        android:id="@+id/newMovie_progressBar"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:indeterminateTint="@color/accent_color"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/new_movies_header" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_new_movies"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/new_movies_header"
                        app:spanCount="2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_movies_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                        android:id="@+id/top_movies_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/top_movies"
                        app:arrow_visibility="true"/>

                    <ProgressBar
                        android:id="@+id/topMovie_progressBar"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:indeterminateTint="@color/accent_color"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top_movies_header" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top_movies"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top_movies_header"
                        app:spanCount="2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_tvShows_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.lukakordzaia.streamflow.customviews.CPhoneHeaderView
                        android:id="@+id/top_tvShows_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/new_movies"
                        app:arrow_visibility="true"/>

                    <ProgressBar
                        android:id="@+id/topTvShow_progressBar"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:indeterminateTint="@color/accent_color"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top_tvShows_header" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top_tvShows"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top_tvShows_header"
                        app:spanCount="2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>